test/execflags/tmacd/config_ref.chpl
config const n1 = 1;
config const ref n3 = n1;
